<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rasp-Home</string>
    <string name="activity_settings_label">Settings</string><string name="service_positioning_label">Positioning Service</string><string name="service_communication_label">Communication Service</string>
    <string name="pref_positioning_category_title">Positioning</string>
    <string name="pref_positioning_tracking_title">Tracking</string>
    <string name="pref_positioning_tracking_summary_on">Position tracking enabled</string>   
    <string name="pref_positioning_tracking_summary_off">Position tracking disabled</string>
    <string name="pref_positioning_interval_title">Tracking interval</string>
    <string name="pref_positioning_interval_summary">%d ms</string>
    <string name="pref_positioning_calibrate_title">Calibrate</string>
    <string name="pref_positioning_calibrate_summary">Calibrate the tracking positions</string>
    <string name="dialog_positioning_locations_label">Select location</string>
    <string name="dialog_positioning_record_on">Record started</string>
    <string name="dialog_positioning_record_off">Record stopped</string>
    <string name="dialog_positioning_save_label">Current saved positions</string>
    <plurals name="dialog_positioning_save_count">
        <item quantity="one">1 position</item>
        <item quantity="other">%d positions</item>
    </plurals><string name="dialog_positioning_erase_title">Delete all positions</string>    
    <string name="notification_positioning_title">Current location</string>
    <string name="notification_positioning_text">No location found</string>
    <string name="error_no_wifi">Turn on wifi to start tracking</string>
    <string name="error_no_position">Could not detekt the current position</string>
    <string name="error_wrong_number">Number not allowed</string>
    <string name="pref_communication_category_title">Network</string>
    <string name="pref_communication_user_title">Username</string>
    <string name="pref_communication_pass_title">Password</string>
    <string name="pref_communication_serverport_title">Serverport</string>
    <string name="pref_communication_serverport_summary">%d</string>
    <string name="pref_communication_zeroconfport_title">Zerocongport</string>
    <string name="pref_communication_zeroconfport_summary">%d</string>
    <string name="pref_communication_timeout_title">Timeout</string>
    <string name="pref_communication_timeout_summary">%d ms</string>
    <string name="title_activity_ControlRoom">Control Nodes inside this Room</string>
</resources>