<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:key="pref_positioning_category" android:title="@string/pref_positioning_category_title">
        <SwitchPreference 
            android:key="pref_positioning_tracking" 
            android:title="@string/pref_positioning_tracking_title"
            android:defaultValue="false" 
            android:summaryOff="@string/pref_positioning_tracking_summary_off" 
            android:summaryOn="@string/pref_positioning_tracking_summary_on"/>
        <de.unidue.wiwi.tdr.kn3.rasp_home.NumberPickerPreference
            android:key="pref_positioning_interval"
            android:title="@string/pref_positioning_interval_title"
            android:summary="@string/pref_positioning_interval_summary"
            android:defaultValue="6000"
            custom:minValue="4000"
            android:dialogLayout="@layout/numberpicker_dialog"/>
        <de.unidue.wiwi.tdr.kn3.rasp_home.PositioningPreference
            android:key="pref_positioning_calibrate"
            android:title="@string/pref_positioning_calibrate_title"
            android:summary="@string/pref_positioning_calibrate_summary"
            android:dialogLayout="@layout/positioning_dialog"/>
    </PreferenceCategory>
</PreferenceScreen>