<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ToggleButton
        android:id="@+id/dialog_positioning_record_toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_small"
        android:textOff="@string/dialog_positioning_record_off"
        android:textOn="@string/dialog_positioning_record_on" />

    <TextView
        android:id="@+id/dialog_positioning_locations_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/dialog_positioning_locations_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/dialog_positioning_locations_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small" />

    <TextView
        android:id="@+id/dialog_positioning_save_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/dialog_positioning_save_label" />

    <TextView
        android:id="@+id/dialog_positioning_save_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/dialog_positioning_erase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/dialog_positioning_erase_title" />

</LinearLayout>